--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Agenda, day 1"
+    "# Agenda, Python first steps\n",
+    "\n",
+    "1. "
    ]
   },
   {
