--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -4,9 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Agenda, Python first steps\n",
+    "# Agenda, Python in Five Weeks\n",
     "\n",
-    "1. "
+    "1. Fundamentals and core concepts\n",
+    "    - What is a programming language?\n",
+    "    - What is Python?\n",
+    "    - What are values?\n",
+    "    - What are variables?\n",
+    "    - Assigning to variables\n",
+    "    - Comparing values with one another\n",
+    "    - Conditionals -- making decisions based on values\n",
+    "    - Numbers (ints and floats)\n",
+    "    - Strings (\"text\")\n",
+    "    - Methods on strings\n",
+    "2. Loops, lists, and tuples\n",
+    "3. Dictionaries and files\n",
+    "4. Functions\n",
+    "5. Modules and packages"
    ]
   },
   {
