--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -19,7 +19,7 @@
     "    - Methods on strings\n",
     "2. Loops, lists, and tuples\n",
     "3. Dictionaries and files\n",
-    "4. Functions\n",
+    "4. Functions -- defining our own verbs in Python\n",
     "5. Modules and packages"
    ]
   },
