--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -24,6 +24,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Jupyter is a REPL (read-eval-print loop)\n",
+    "\n",
+    "Which is a fancy way of saying that I can put Python into it, and execute it easily.  It's a great tool for trying things out -- I call it my Python laboratory.\n",
+    "\n",
+    "Among other things, Jupyter lets me type Python code and (like I'm doing here) Markdown, which can be turned into nicely formatted HTML."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
