--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -39,7 +39,14 @@
    "metadata": {},
    "source": [
     "# What is a programming language? \n",
-    "\n"
+    "\n",
+    "Logic can be expressed via electricity in the following ways:\n",
+    "\n",
+    "- If two wires both carry a current, then a third wire (the output) will have a current, too. That's known as `AND`.\n",
+    "- If two wires go into a box, and one or both of them carries a current, then a third wire (the output) will have a current, too. That's known as `OR`.\n",
+    "- If one wire goes into a box, and it has a current, then the output wire will *NOT* have a current.  But if the input wire does NOT a current, then the output will. That's known as `NOT`.\n",
+    "\n",
+    "These three pieces of logic are the foundation of all computers used today."
    ]
   },
   {
