--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -46,7 +46,11 @@
     "- If two wires go into a box, and one or both of them carries a current, then a third wire (the output) will have a current, too. That's known as `OR`.\n",
     "- If one wire goes into a box, and it has a current, then the output wire will *NOT* have a current.  But if the input wire does NOT a current, then the output will. That's known as `NOT`.\n",
     "\n",
-    "These three pieces of logic are the foundation of all computers used today."
+    "These three pieces of logic are the foundation of all computers used today.\n",
+    "\n",
+    "At a certain point, it became untenable to change the hardware, and reconfigure all of these boxes, for each problem you might to solve.  In the end, we got general-purpose computers that we can change the logic of on the fly.  The computer supports lots and lots and lots of logical operations, and we can write programs to choose which operations we want.\n",
+    "\n",
+    "This meant, originally, writing programs in a very low-level way that mimicked the circuits.  Over time, this way of writing p"
    ]
   },
   {
