--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -50,15 +50,29 @@
     "\n",
     "At a certain point, it became untenable to change the hardware, and reconfigure all of these boxes, for each problem you might to solve.  In the end, we got general-purpose computers that we can change the logic of on the fly.  The computer supports lots and lots and lots of logical operations, and we can write programs to choose which operations we want.\n",
     "\n",
-    "This meant, originally, writing programs in a very low-level way that mimicked the circuits.  Over time, this way of writing p"
+    "This meant, originally, writing programs in a very low-level way that mimicked the circuits.  Over time, this way of writing code became too tedious for most people and most problems.  We wanted higher-level programming languages.\n",
+    "\n",
+    "And that's where most languages you've heard of come in:\n",
+    "\n",
+    "- C\n",
+    "- C++\n",
+    "- Java\n",
+    "- C#\n",
+    "- Ruby\n",
+    "- JavaScript\n",
+    "- Python\n",
+    "\n",
+    "Every language in this list is a way to write our code such that it's easier for people to write and understand.  Then it gets translated into those 1s and 0s, and those circuits inside of our computer."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# How are languages different? Why Python?\n",
+    "\n",
+    "Languages are trade-offs.  They can be eas"
+   ]
   }
  ],
  "metadata": {
