--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -71,7 +71,13 @@
    "source": [
     "# How are languages different? Why Python?\n",
     "\n",
-    "Languages are trade-offs.  They can be eas"
+    "Languages are trade-offs.  They can be easier for people to read/write, but then slower to execute. (Python)  Or they can be very hard for people to read and write, but then fast to execute (C and C++).\n",
+    "\n",
+    "Go (Golang) is specifically designed for networking operations.  Erlang is designed for highly fault-tolerant systems, like your phone company.\n",
+    "\n",
+    "Python is a great language for an age in which people are expensive, and computers are cheap.\n",
+    "\n",
+    "Where i"
    ]
   }
  ],
