--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -77,8 +77,22 @@
     "\n",
     "Python is a great language for an age in which people are expensive, and computers are cheap.\n",
     "\n",
-    "Where i"
+    "Python isn't new -- it is more than 30 years old! But it has became **VERY** popular in the last few years, because it is so easy to learn and it's useful in so many areas:\n",
+    "\n",
+    "- #1 language for data analytics and data science\n",
+    "- web development\n",
+    "- system administration\n",
+    "- devops\n",
+    "- automated testing\n",
+    "- education"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
