--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -88,6 +88,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using Jupyter\n",
+    "\n",
+    "In Jupyter, everything is in a \"cell.\" A cell can have a type:\n",
+    "\n",
+    "- Markdown (nicely formatted text)\n",
+    "- Python code \n",
+    "- Code in about 50 other languages, too (but I've never tried those in Jupyter)\n",
+    "\n",
+    "You type into a cell, and then you press shift+ENTER (or sometimes control+ENTER), and the cell \"executes.\" If it's a Markdown cell, then you see it nicely formatted. If it's a Python cell, then the code executes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
