--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -104,10 +104,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello out there!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this is a comment, starting with # until the end of the line; Python ignores it completely\n",
+    "# print is a function, a verb, that does something -- it displays something on the screen\n",
+    "# to run print, we use (), and anything in the parentheses is printed on the screen\n",
+    "# If we want to print text, we need to put it in quotes, either '' or \"\" -- in Python, they're the same\n",
+    "\n",
+    "print('Hello out there!')   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
