--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -128,7 +128,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# "
+    "# Jupyter navigation/command tips\n",
+    "\n",
+    "Jupyter can be in either of two modes:\n",
+    "\n",
+    "- Edit mode, which means that whatever you type is displayed. Like right now. If we're in edit mode, then the outline of the cell is green. You can enter edit mode by pressing ENTER or by clicking on the cell with your mouse.\n",
+    "- Command mode, which means that whatever you type is handed to Jupyter as a command. If we're in command mode, then the outline of the cell is blue. You can enter command mode by pressing ESC or clicking to the left of the cell with your mouse.\n",
+    "\n",
+    "### What commands can we use?\n",
+    "\n",
+    "- `h` -- brings up a help menu of what commands are available\n",
+    "- `c` -- copies the current cell\n",
+    "- `x` -- cuts the current cell\n",
+    "- `v` -- pastes the most recent copy or cut\n",
+    "- `z` -- undoes many (not all) of your actions\n",
+    "- `a` -- get a new cell *above* the current one\n",
+    "- `b` -- get a new cell *below*"
    ]
   }
  ],
