--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -199,14 +199,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reuven\n"
+     ]
+    }
+   ],
    "source": [
     "# we could just use print with whatever literal value we want to display\n",
     "# but it's often easier to use a *variable*, a name that refers to that value\n",
     "# this gives us much more flexibility in our program, and allows us to think at a higher level\n",
-    "\n"
+    "\n",
+    "name = 'Reuven'       # this is assignment: we assign a value (on the right) to a variable (on the left)\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Assignment is with `=`\n",
+    "\n",
+    "The `=` in Python is **NOT** the same as the one you're used to in mathematics.  In math, `=` means that the stuff on the left and the stuff on the right are the same value.\n",
+    "\n",
+    "That is **NOT** the case for `=` in Python.  It's a verb. It's an operation. It's an assignment, taking whatever is on the right and assigning it to the name on the left.\n",
+    "\n",
+    "### What is a legal variable name?\n",
+    "\n",
+    "- Any combination of letters, numbers, and `_` (used for spaces between words)\n",
+    "- Not st"
    ]
   }
  ],
