--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -232,8 +232,18 @@
     "### What is a legal variable name?\n",
     "\n",
     "- Any combination of letters, numbers, and `_` (used for spaces between words)\n",
-    "- Not st"
+    "- Not starting with a number\n",
+    "- You don't want to start with `_`, even though you technically can\n",
+    "- Capital and lowercase letters are different\n",
+    "- It's traditional to only use lowercase in Python variable names."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
