--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -143,7 +143,9 @@
     "- `v` -- pastes the most recent copy or cut\n",
     "- `z` -- undoes many (not all) of your actions\n",
     "- `a` -- get a new cell *above* the current one\n",
-    "- `b` -- get a new cell *below* the current one"
+    "- `b` -- get a new cell *below* the current one\n",
+    "- `m` -- turn a cell into Markdown\n",
+    "- `y` -- turn a cell into Python"
    ]
   },
   {
