--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -242,10 +242,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcdefgh\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 'abcd'\n",
+    "y = 'efgh'\n",
+    "\n",
+    "# now I have two variables, x and y, defined\n",
+    "# both of them contain text\n",
+    "\n",
+    "# can I add them together?\n",
+    "# yes!\n",
+    "\n",
+    "print(x+y)    # turns out that + works if we have text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6912\n"
+     ]
+    }
+   ],
+   "source": [
+    "# what about if we have numbers?\n",
+    "\n",
+    "x = 1234\n",
+    "y = 5678\n",
+    "\n",
+    "print(x+y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data types \n",
+    "\n",
+    "Every language needs to handle different *data types*. Each type of data is stored in a different way in memory, can handle different operations, and interacts with other data types in different ways.\n",
+    "\n",
+    "We have now seen two different importa"
+   ]
   }
  ],
  "metadata": {
