--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -296,8 +296,42 @@
     "\n",
     "Every language needs to handle different *data types*. Each type of data is stored in a different way in memory, can handle different operations, and interacts with other data types in different ways.\n",
     "\n",
-    "We have now seen two different importa"
+    "We have now seen two different important data types, which we'll discuss more later today:\n",
+    "\n",
+    "- Integers (whole numbers), which we type with just digits\n",
+    "- Strings (text), which we type with '' or \"\" around them\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12345678\n"
+     ]
+    }
+   ],
+   "source": [
+    "# notice what happens here:\n",
+    "\n",
+    "x = '1234'   # what kind of data do I have here? ... text strings! \n",
+    "y = '5678'\n",
+    "\n",
+    "print(x+y)   # what will this print?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
