--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -443,14 +443,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [17], line 9\u001b[0m\n\u001b[1;32m      2\u001b[0m y \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m5678\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# adding x+y could be one of three things:\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# (1) Python could say that the string contains digits, so let's treat it like an int, and get an int back\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# (2) Python could say that we're working with a string, so we'll treat the number like a string, and get a str\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# (3) Python could say: Don't make me decide! Figure out your life on your own!\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[43mx\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43my\u001b[49m   \n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+     ]
+    }
+   ],
    "source": [
     "x = 1234\n",
     "y = '5678'\n",
-    "\n"
+    "\n",
+    "# adding x+y could be one of three things:\n",
+    "# (1) Python could say that the string contains digits, so let's treat it like an int, and get an int back\n",
+    "# (2) Python could say that we're working with a string, so we'll treat the number like a string, and get a str\n",
+    "# (3) Python could say: Don't make me decide! Figure out your life on your own!\n",
+    "\n",
+    "x+y   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
