--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -299,9 +299,7 @@
     "We have now seen two different important data types, which we'll discuss more later today:\n",
     "\n",
     "- Integers (whole numbers), which we type with just digits\n",
-    "- Strings (text), which we type with '' or \"\" around them\n",
-    "\n",
-    "\n"
+    "- Strings (text), which we type with '' or \"\" around them"
    ]
   },
   {
@@ -471,11 +469,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Markdown crash course\n",
+    "\n",
+    "# Biggest headline\n",
+    "## Second biggest headline\n",
+    "### Third biggest headline\n",
+    "\n",
+    "This is text.  It just works.\n",
+    "\n",
+    "I have a bulleted list:\n",
+    "- One\n",
+    "- Two\n",
+    "- Three\n",
+    "    - This\n",
+    "    - Has\n",
+    "    - Some\n",
+    "    - Inner\n",
+    "    - List\n",
+    "    - Too\n",
+    "- Four\n",
+    "\n",
+    "Some text is"
+   ]
   }
  ],
  "metadata": {
