--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -492,8 +492,62 @@
     "    - Too\n",
     "- Four\n",
     "\n",
-    "Some text is"
+    "Some text is in *italic*, some in **bold**, and some is in `monospace` as on a computer."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reuven\n"
+     ]
+    }
+   ],
+   "source": [
+    "# One thing to be careful of is the distinction between variables, which are just names,\n",
+    "# and text strings, which MUST have quotes around them.\n",
+    "\n",
+    "name = 'Reuven'    # the variable name doesn't have quotes, but my name 'Reuven' does\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Reuven' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [19], line 6\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# if I do this, then Python thinks that Reuven is a defined variable, and tries to assign\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# its value to the variable name\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# but there is no variable Reuven, so we get an error\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m name \u001b[38;5;241m=\u001b[39m \u001b[43mReuven\u001b[49m   \n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Reuven' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# if I do this, then Python thinks that Reuven is a defined variable, and tries to assign\n",
+    "# its value to the variable name\n",
+    "\n",
+    "# but there is no variable Reuven, so we get an error\n",
+    "\n",
+    "name = Reuven   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
