--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -543,6 +543,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: Simple calculator\n",
+    "\n",
+    "1. Assign a number to the variable `x`.\n",
+    "2. Assign a number to the variable `y`.\n",
+    "3. Assign their total to the variable `total`.\n",
+    "4. Print `total` on your screen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# shift+enter executes the command"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
