--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -584,11 +584,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Variables vs. text \n",
+    "\n",
+    "When we assign a value to a variable in Python, it will always look like this:\n",
+    "\n",
+    "    VARIABLE = VALUE\n",
+    "    \n",
+    "The variable on the left will never have quotes around it, because it can't. It has to be a variable name.\n",
+    "\n",
+    "On the right, we have some options:\n",
+    "\n",
+    "- We could assign an integer value, with just digits. That's how Python would know it's an integer.\n",
+    "- We could assign a string value, with any combination of characters inside of quotes, either `''` or `\"\"`. That's how Python knows it's a string.\n",
+    "- We could also assign the value currently assigned to another variable. If there are no quotes, then Python assumes it's a variable name.\n",
+    "\n",
+    "S"
+   ]
   }
  ],
  "metadata": {
