--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -543,18 +543,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exercise: Simple calculator\n",
-    "\n",
-    "1. Assign a number to the variable `x`.\n",
-    "2. Assign a number to the variable `y`.\n",
-    "3. Assign their total to the variable `total`.\n",
-    "4. Print `total` on your screen."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -601,7 +589,49 @@
     "- We could assign a string value, with any combination of characters inside of quotes, either `''` or `\"\"`. That's how Python knows it's a string.\n",
     "- We could also assign the value currently assigned to another variable. If there are no quotes, then Python assumes it's a variable name.\n",
     "\n",
-    "S"
+    "So if I say\n",
+    "\n",
+    "    name = 'Reuven'\n",
+    "    \n",
+    "Python sees the variable name on the left (good!) and the text string on the right (that's good!) and it assigns that text string to the variable.\n",
+    "\n",
+    "But if I say\n",
+    "\n",
+    "    name = Reuven\n",
+    "    \n",
+    "Python sees the variable name on the left (good!) and a variable name on the right -- but there is no variable named `Reuven`, and so it gives us an error.    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: Simple calculator\n",
+    "\n",
+    "1. Assign a number to the variable `x`.\n",
+    "2. Assign a number to the variable `y`.\n",
+    "3. Assign their total to the variable `total`.\n",
+    "4. Print `total` on your screen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 10\n",
+    "y = 20\n",
+    "total = x + y    # notice what I did here: variable = value ... the value we get back from x+y\n",
+    "\n",
+    "# an expressio"
    ]
   }
  ],
