--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -623,16 +623,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
    "source": [
     "x = 10\n",
     "y = 20\n",
     "total = x + y    # notice what I did here: variable = value ... the value we get back from x+y\n",
     "\n",
-    "# an expressio"
+    "# an expression is something that gives us a value back, like x+y, and can be assigned to a variable\n",
+    "\n",
+    "print(total)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: Simple greeting\n",
+    "\n",
+    "1. Assign your name to the variable `name`.\n",
+    "2. Print a greeting to yourself using `name` and other strings to its left and right."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
