--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -656,6 +656,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Reuven!\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Reuven'     # variable = value\n",
+    "\n",
+    "# notice that:\n",
+    "# 1. we can have multiple + signs\n",
+    "# 2. if you don't put a space inside of the string before the name, it's all mushed together\n",
+    "\n",
+    "print('Hello, ' + name + '!')   "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
