--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -679,6 +679,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Reuven !\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Reuven'     # variable = value\n",
+    "\n",
+    "# the secret is that print can take multiple arguments (values in its parentheses), separated by ,\n",
+    "# if you do that, the values are printed, separated by spaces\n",
+    "\n",
+    "print('Hello,', name, '!')   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Next up\n",
+    "\n",
+    "1. Input from the user\n",
+    "2. Assign input to a variable\n",
+    "3. Printing strings in a nicer way\n",
+    "4. Comparisons with `==` and friends\n",
+    "5. Conditionals with `if` and `else`\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
