--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -718,7 +718,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# I want to be able to ask the user for their name\n",
+    "# and then display it on the screen\n",
+    "# (mayb)"
+   ]
   }
  ],
  "metadata": {
