--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -721,7 +721,22 @@
    "source": [
     "# I want to be able to ask the user for their name\n",
     "# and then display it on the screen\n",
-    "# (mayb)"
+    "# (maybe even with a fancy greeting)\n",
+    "\n",
+    "# We're going to need a new function -- input\n",
+    "# input lets us ask a question, and it returns a value\n",
+    "# (that is, it's an expression)\n",
+    "# we can assign that value to a variable\n",
+    "\n",
+    "# when we call input, we can give it (inside of its parentheses) a string\n",
+    "# to display to the user, to let them know what kind of input we want.\n",
+    "\n",
+    "# in assignment, the right side runs before the left\n",
+    "# so when we run this code, the program will hang, waiting for the user's input.\n",
+    "# when we get that input, it'll be returned by the function as a string\n",
+    "# value (a text value), and assigned to the variabl\n",
+    "\n",
+    "name = input('Enter your name: ')"
    ]
   }
  ],
