--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -715,9 +715,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: Reuven\n"
+     ]
+    }
+   ],
    "source": [
     "# I want to be able to ask the user for their name\n",
     "# and then display it on the screen\n",
@@ -734,9 +742,75 @@
     "# in assignment, the right side runs before the left\n",
     "# so when we run this code, the program will hang, waiting for the user's input.\n",
     "# when we get that input, it'll be returned by the function as a string\n",
-    "# value (a text value), and assigned to the variabl\n",
+    "# value (a text value), and assigned to the variable name.\n",
     "\n",
     "name = input('Enter your name: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Reuven'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name    # printed representation of our value, a string, so we see the ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reuven\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(name)    # we're calling print on name, to display it nicely on the screen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Reuven!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# now that name is defined, I can use it:\n",
+    "\n",
+    "print('Hello, ' + name + '!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = input('Enter your name: ')\n",
+    "print('Hello, ' + name + '!')"
    ]
   }
  ],
