--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -812,6 +812,25 @@
     "name = input('Enter your name: ')\n",
     "print('Hello, ' + name + '!')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: Flexible, friendly greeting\n",
+    "\n",
+    "1. Ask the user to enter their name, and assign to `name`.\n",
+    "2. Ask the user to enter their country, and assign to `country`.\n",
+    "3. Define a new variable, `greeting`, and assign it a new string based on `name` and `country`.\n",
+    "4. Use `print` to display `greeting`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
