--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -830,7 +830,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = input('Enter your name: ')\n",
+    "country = input('Enter your country: ')\n",
+    "greeting = 'Hello, ' + name + ', from ' + country + '!'"
+   ]
   }
  ],
  "metadata": {
