--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -827,13 +827,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: Reuven\n",
+      "Enter your country: Israel\n",
+      "Hello, Reuven, from Israel!\n"
+     ]
+    }
+   ],
    "source": [
     "name = input('Enter your name: ')\n",
     "country = input('Enter your country: ')\n",
-    "greeting = 'Hello, ' + name + ', from ' + country + '!'"
+    "greeting = 'Hello, ' + name + ', from ' + country + '!'\n",
+    "print(greeting)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: Reuven\n",
+      "Enter your country: Israel\n",
+      "Hello, Reuven, from Israel!\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('Enter your name: ')\n",
+    "country = input('Enter your country: ')\n",
+    "print('Hello, ' + name + ', from ' + country + '!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comparing things\n",
+    "\n",
+    "Let's say that I have values in variables `x` and `y`, and I want to know if they are the same value. "
    ]
   }
  ],
